...
                android:background="@drawable/grey_borderless_background"
                android:hint="@string/username"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputETUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="25"
...
                android:padding="10dp"
                android:textColorHint="@color/colorWhite"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/eye_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputETPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="25"
...
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
...
                    android:layout_weight="1"
                    android:background="@color/colorPaleWhite" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_up"
...
