<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logoImageView"
            />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="80dp"
            android:minHeight="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/quizruslogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonBack"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="60sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/grey_borderless_background"
                android:hint="@string/username"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputETUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/password"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputETPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputETConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/first_name"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputETFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/last_name"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputETLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="35sp" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>