...
            android:background="@drawable/question_option_panel_color"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:weightSum="4">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/question_option_button_default_color"
...
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonProceed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="40sp"
...
