...
    <string name="title_activity_course_students">SRSYS: Course Registrations</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
...
