...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="30dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/buttonDeleteQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/question_option_button_wrong"
                android:gravity="center"
...
